--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 .container {
   /* KARIERTER HINTERGRUND ENTFERNT */
-  background-color: #f5f5f5;
+  background-color: #5a6c7d;
   /* background-image entfernt */
   /* background-size entfernt */
   
