--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
 }
 .container .card {
   padding: 20px;
-  background-color: #e9e9e9;
+  background-color: #5a6c7d;
   border-radius: 10px;
   width: 80%;
   max-width: 400px;
