--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 .container {
   /* DUNKLER HINTERGRUND */
-  background-color: #3a4a5c;
+  background-color: #43777B;
   
   /* QUADRATISCH GEMACHT */
   width: 100vw;
