--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap");
 
+html, body {
+  background-color: #43777B;
+}
+
 * {
   margin: 0;
   padding: 0;
