--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@
   /* DUNKLER HINTERGRUND */
   background-color: #43777B;
   
-  /* QUADRATISCH GEMACHT */
+  /* FORM */
   width: 100vw;
-  height: 100vh;
+  height: 150vh;
   max-width: 100vh;
   margin: 0 auto;
   
